Fix word-wrap on pre elements.

--- a/css/expound.less
+++ b/css/expound.less
@@ -15,6 +15,7 @@ pre, code, kbd, tt, var {
 }
 
 pre {
+	word-wrap: normal;
 	margin-bottom: 20px;
 	padding: 15px 20px;
 	background: #f5f5f5;
